# pycounts_sj

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_sj/: __init__.py  plotting.py  pycounts_sj.py
tests/: test_pycounts_sj.py
